@@ -31,6 +31,8 @@ Core and Builtins
 Library
 -------
 
+- Issue 14773: Fix os.fwalk() failing on dangling symlinks.
+
 - Issue 14807: move undocumented tarfile.filemode() to stat.filemode() and add
   doc entry. Add tarfile.filemode alias with deprecation warning.
 
